Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10411

Stream request response shouldn't contain mutation it was started with

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • 3
    • Unknown
    • June 30 - July 18

    Description

      When doing a UPR request stream request, start with a certain sequence number, that sequence number shouldn't be included in the response. It should only contain mutation that since that sequence number happened.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sriram Sriram Ganesan (Inactive)
            vmx Volker Mische
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty