MB-10411: Stream request response shouldn't contain start seqno

Whenever a stream request is issued with a start sequence number,
the response from the checkpoint and the backfill shouldn't
contain the start sequence number

Change-Id: I93c8b7540bbaddb7e8ed0b81a0128c18662d2cef
Reviewed-on: http://review.couchbase.org/35578
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>